objects/Feedback__c.object
<CustomObject>
    <description>Allows a user to submit system feedback, whether it&apos;s an issue experienced or a new feature desired.</description>
    <fields>
        <fullName>Backlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The backlog item related to this feedback.</description>
        <inlineHelpText>The backlog item related to this feedback.</inlineHelpText>
        <label>Backlog Item</label>
        <referenceTo>Backlog__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Provide more in-depth detail related to your feedback.</description>
        <inlineHelpText>Provide more in-depth detail related to your feedback.</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicate the persona, which gives the user&apos;s perspective. Who is it that wants/needs this feature to be implemented?</description>
        <inlineHelpText>Indicate the persona, which gives the user&apos;s perspective. Who is it that wants/needs this feature to be implemented?</inlineHelpText>
        <label>As a(n)</label>
        <referenceTo>Persona__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>How important is this feedback?</description>
        <inlineHelpText>Tell us how important this feedback is.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1 - Blocking My Work</fullName>
                </value>
                <value>
                    <fullName>P2 - Using Workaround</fullName>
                </value>
                <value>
                    <fullName>P3 - No Impact on My Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screenshots__c</fullName>
        <description>Provide any screenshots or other images (with captions, if you&apos;d like) related to your issue.</description>
        <inlineHelpText>Provide any screenshots or other images (with captions, if you&apos;d like) related to your issue.</inlineHelpText>
        <label>Screenshots</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <description>Provide a list of (preferably detailed and unambiguous) steps that a developer can follow to reliably reproduce your issue.</description>
        <inlineHelpText>Provide a list of (preferably detailed and unambiguous) steps that a developer can follow to reliably reproduce your issue.</inlineHelpText>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is submitting this feedback?</description>
        <inlineHelpText>Tell us who is submitting this feedback.</inlineHelpText>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Short summary of the feedback item.</description>
        <inlineHelpText>Enter a short summary of the feedback item.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Goal__c</fullName>
        <description>What is the user&apos;s goal?</description>
        <inlineHelpText>Tell us what your goal is.</inlineHelpText>
        <label>I need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Reason__c</fullName>
        <description>Why should this feature be implemented?</description>
        <inlineHelpText>Tell us why this feature should be implemented.</inlineHelpText>
        <label>So that</label>
        <type>TextArea</type>
    </fields>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <recordTypes>
        <fullName>Feature</fullName>
        <active>true</active>
        <description>Allows users to contribute feature requests to improve the system.</description>
        <label>Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>Allows users to identify issues existing within the system.</description>
        <label>Issue</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>